MOSIP-34483 Added surefire plugin for sonar issue (#1289)
* MOSIP-34483 Added surefire plugin for sonar issue

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

* MOSIP-34483 Removed force deprecation

Signed-off-by: kameshsr <kameshsr1338@gmail.com>

---------

Signed-off-by: kameshsr <kameshsr1338@gmail.com>